fix(test): use PostgreSQLTestResource with PostGIS+pgvector image
- Switch from DevServices to explicit PostgreSQLTestResource for
  integration tests to bypass .env file JDBC_URL conflicts
- Use joshuasundance/postgis_pgvector Docker image which has both
  PostGIS (for geometry) and pgvector (for vector) extensions
- Update PostgreSQLTestProfile to register PostgreSQLTestResource
  and disable DevServices
- Simplify pom.xml Surefire configuration by removing DevServices
  environment variable overrides
- Coverage improved from ~2% to ~5.7%