@@ -2,16 +2,15 @@ package villagecompute.homepage.testing;
 
 import io.quarkus.test.junit.QuarkusTestProfile;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 /**
- * Quarkus test profile for PostgreSQL 17 + PostGIS integration tests.
+ * Quarkus test profile for PostgreSQL 17 + pgvector integration tests.
  *
  * <p>
- * This profile configures tests to use Testcontainers PostgreSQL instead of H2. It delegates container management to
- * {@link PostgreSQLTestResource} to avoid conflicts with .env file configuration.
+ * This profile configures tests to use Testcontainers PostgreSQL via {@link PostgreSQLTestResource}. This approach
+ * bypasses DevServices to avoid conflicts with .env file configuration (which sets QUARKUS_DATASOURCE_JDBC_URL).
  *
  * <p>
  * <b>Usage:</b>
@@ -25,24 +24,20 @@ import java.util.Map;
  * </pre>
  *
  * <p>
- * <b>Note:</b> This profile is automatically used by BaseIntegrationTest subclasses when no explicit
- * &#64;QuarkusTestResource(H2TestResource.class) annotation is present.
- *
- * <p>
  * <b>Ref:</b> Task I1.T2 - BaseIntegrationTest infrastructure
  */
 public class PostgreSQLTestProfile implements QuarkusTestProfile {
 
     @Override
     public List<TestResourceEntry> testResources() {
-        // Don't use PostgreSQLTestResource - rely on Quarkus DevServices which is already configured
-        // in application.yaml %test profile with postgis/postgis:17-3.5-alpine image
-        return Collections.emptyList();
+        // Use PostgreSQLTestResource to explicitly manage Testcontainers PostgreSQL
+        // This bypasses DevServices and overrides .env file JDBC_URL
+        return List.of(new TestResourceEntry(PostgreSQLTestResource.class));
     }
 
     @Override
     public boolean disableGlobalTestResources() {
-        // Don't disable global test resources - DevServices needs to work
+        // Don't disable global test resources
         return false;
     }
 
@@ -53,11 +48,10 @@ public class PostgreSQLTestProfile implements QuarkusTestProfile {
 
     @Override
     public Map<String, String> getConfigOverrides() {
-        // Override any env vars that might interfere with DevServices
-        // Note: We deliberately do NOT set jdbc.url - DevServices needs it to be unset to auto-generate the URL
-        // Note: We don't set username/password - DevServices uses its own credentials by default
-        return Map.of("quarkus.datasource.db-kind", "postgresql", "quarkus.datasource.devservices.enabled", "true",
-                "quarkus.datasource.devservices.image-name", "joshuasundance/postgis_pgvector:latest",
-                "quarkus.datasource.devservices.init-script-path", "db/init-test-postgis.sql");
+        // Disable DevServices since we're using PostgreSQLTestResource
+        // PostgreSQLTestResource provides jdbc.url, username, and password
+        return Map.of(
+                "quarkus.datasource.db-kind", "postgresql",
+                "quarkus.datasource.devservices.enabled", "false");
     }
 }
